[REFACTOR] Fix PaymentRepository and related tests